--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,4 +2,5 @@ plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.js
     spec: "@yarnpkg/plugin-interactive-tools"
 
-yarnPath: .yarn/releases/yarn-sources.js
+yarnPath: .yarn/releases/yarn-2.0.0-rc.31.js
+nodeLinker: node-modules
