--- a/packages/app-builder-lib/package.json
+++ b/packages/app-builder-lib/package.json
@@ -50,19 +50,20 @@
     "builder-util-runtime": "workspace:*",
     "chromium-pickle-js": "^0.2.0",
     "debug": "^4.1.1",
-    "ejs": "^3.0.2",
     "deskgap-publish": "workspace:*",
+    "ejs": "^3.0.2",
+    "find-yarn-workspace-root": "^1.2.1",
     "fs-extra": "^9.0.0",
     "hosted-git-info": "^3.0.4",
     "is-ci": "^2.0.0",
-    "isbinaryfile": "^4.0.5",
+    "isbinaryfile": "^4.0.6",
     "js-yaml": "^3.13.1",
     "lazy-val": "^1.0.4",
     "minimatch": "^3.0.4",
     "normalize-package-data": "^2.5.0",
     "read-config-file": "6.0.0",
     "sanitize-filename": "^1.6.3",
-    "semver": "^7.1.3",
+    "semver": "^7.3.2",
     "temp-file": "^3.3.7"
   },
   "///": "babel in devDependencies for proton tests",
@@ -84,17 +85,17 @@
     "@babel/plugin-proposal-throw-expressions": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.8.3",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@types/debug": "^4.1.5",
-    "@types/ejs": "^3.0.1",
+    "@types/ejs": "^3.0.2",
     "@types/fs-extra": "^8.1.0",
     "@types/is-ci": "^2.0.0",
     "@types/js-yaml": "^3.12.3",
     "@types/normalize-package-data": "^2.4.0",
     "@types/semver": "^7.1.0",
-    "dmg-builder": "workspace:*",
-    "deskgap-builder-squirrel-windows": "workspace:*"
+    "deskgap-builder-squirrel-windows": "workspace:*",
+    "dmg-builder": "workspace:*"
   },
   "//": "deskgap-builder-squirrel-windows and dmg-builder added as dev dep for tests (as otherwise `require` doesn't work using Yarn 2)",
   "typings": "./out/index.d.ts"
