--- a/packages/tsconfig-base.json
+++ b/packages/tsconfig-base.json
@@ -1,9 +1,13 @@
 {
   "extends": "../tsconfig-base.json",
   "compilerOptions": {
+    "target": "ES2017",
+    "module": "CommonJS",
+    "incremental": true,
     "baseUrl": ".",
     "declaration": true,
     "stripInternal": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "composite": true
   }
 }
