--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "@deskgap-builder/monorepo",
   "private": true,
-  "workspaces": [
-    "packages/*",
-    "test"
-  ],
+  "workspaces": {
+    "packages": [
+      "packages/*",
+      "test"
+    ]
+  },
   "license": "MIT",
   "scripts": {
     "//": "do not wrap into single quotes - windows doesn't unwrap arg in this case",
+    "dev": "yarn tsc -b --watch --preserveWatchOutput",
     "compile": "ts-babel \"packages/*\" && tsc --build test",
     "//compile2": "tsc --build packages/deskgap-builder packages/deskgap-updater packages/deskgap-builder-squirrel-windows",
     "lint": "eslint packages --ext .ts",
@@ -34,22 +37,26 @@
   "dependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-transform-modules-commonjs": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
+    "@babel/preset-env": "^7.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "@yarnpkg/pnpify": "^2.0.0-rc.20",
     "babel-core": "^6.26.3",
-    "babel-preset-jest": "^25.2.1",
+    "babel-preset-jest": "^25.3.0",
     "bluebird-lst": "^1.0.9",
-    "deskgap-builder-tslint-config": "^1.1.0",
+    "electron-builder-tslint-config": "^1.1.0",
     "eslint": "^6.8.0",
     "fs-extra": "^9.0.0",
     "globby": "^11.0.0",
-    "jest-cli": "^25.2.4",
+    "jest-cli": "^25.3.0",
     "jsdoc-to-markdown": "^5.0.3",
     "ts-babel": "6.1.7",
     "ts-jsdoc": "^3.1.1",
     "typescript": "~3.8.3",
     "typescript-json-schema": "^0.42.0"
+  },
+  "devDependencies": {
+    "@types/node": "13.13.0"
   },
   "eslintIgnore": [
     "*.d.ts",
