dev: setup project references

--- a/packages/app-builder-lib/tsconfig.json
+++ b/packages/app-builder-lib/tsconfig.json
@@ -15,5 +15,10 @@
   ],
   "exclude": [
     "../../typings/deskgap.d.ts"
+  ],
+  "references": [
+    { "path": "../builder-util" },
+    { "path": "../builder-util-runtime" },
+    { "path": "../deskgap-publish" },
   ]
 }
