--- a/packages/deskgap-builder-squirrel-windows/tsconfig.json
+++ b/packages/deskgap-builder-squirrel-windows/tsconfig.json
@@ -6,5 +6,9 @@
   },
   "include": [
     "src/**/*.ts"
+  ],
+  "references": [
+    { "path": "../app-builder-lib" },
+    { "path": "../builder-util" },
   ]
 }
