--- a/packages/deskgap-publish/tsconfig.json
+++ b/packages/deskgap-publish/tsconfig.json
@@ -11,5 +11,9 @@
   "include": [
     "src/**/*.ts",
     "../../typings/mime.d.ts"
+  ],
+  "references": [
+    { "path": "../builder-util" },
+    { "path": "../builder-util-runtime" },
   ]
 }
