--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,6 @@ ij_javascript_force_semicolon_style = true
 ij_javascript_use_semicolon_after_statement = false
 ij_typescript_force_semicolon_style = true
 ij_typescript_use_semicolon_after_statement = false
+
+[Makefile]
+indent_style = tab
