--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -3,6 +3,7 @@
     "target": "es2018",
     "module": "esnext",
     "moduleResolution": "node",
+    "resolveJsonModule": true,
 
     "strict": true,
     "noUnusedLocals": true,
